--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "accesscontrol": "^2.2.1",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -11,6 +12,7 @@
     "pg": "^8.3.3",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
+    "supertest": "^5.0.0",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
