--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
+    "memory-cache": "^0.2.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.3.3",
